basic html shell created

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html>
-    <head>
 
-        <title>Hackathon Project</title>
+<!DOCTYPE HTML>
+<html lang="en-US">
+
+<head>
+    <title> Enghack Project </title>
+</head>
+
+<body style="background-image: assets/sky.jpg;">
+    <h1 style="text-align:center;"> About </h1>
+    <p style="color:rgb(0, 36, 196)"> We created a surveillance drone that is capable of recording
+        sound and transmit the messages over Bluetooth to this Web app. </p>
+
+    <hr>
+    <h1 style="text-align:center;"> How We Created It </h1>
+    <p> Using Arduino transmitters </p>
 
 
-    </head>
+    <h1 style="text-align:center;"> Source </h1>
+    <p> View the repository <a href=https://github.com/limelody/enghack-site> here</a>!</p>
+</body>
 
 </html>
