full background image

--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
 
 <head>
     <title> Enghack Project </title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
 </head>
 
 <body style="background-image: assets/sky.jpg;">
-    <h1 style="text-align:center;"> About </h1>
-    <p style="color:rgb(0, 36, 196)"> We created a surveillance drone that is capable of recording
-        sound and transmit the messages over Bluetooth to this Web app. </p>
+    <div class="bg">
+        <h1> About </h1>
+        <p> We created a surveillance drone that is capable of recording
+            sound and transmit the messages over Bluetooth to this Web app. </p>
 
-    <hr>
-    <h1 style="text-align:center;"> How We Created It </h1>
-    <p> Using Arduino transmitters </p>
+        <h1> How We Created It </h1>
+        <p> Using Arduino transmitters </p>
 
+        <h1> Data Receiving </h1>
+        <p> via Bluetooth from the Arduino </p>
 
-    <h1 style="text-align:center;"> Source </h1>
-    <p> View the repository <a href=https://github.com/limelody/enghack-site> here</a>!</p>
+        <h1> Source </h1>
+        <p> View the repository <a href=https://github.com/limelody/enghack-site> here</a>!</p>
+    </div>
 </body>
 
 </html>
