navigation buttons added

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 
-<head>
-    <title> Enghack Project </title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <head>
+        
+        <title> Enghack Project </title>
+        <link href="stylesheet.css" type="text/css" rel="stylesheet" />
+  
+    </head>
 
-</head>
+    <body>
+        <div class="bg">
+            <h1>
+                Drone 
+            </h1> 
 
-<body style="background-image: assets/sky.jpg;">
-    <div class="bg">
-        <h1> About </h1>
-        <p> We created a surveillance drone that is capable of recording
-            sound and transmit the messages over Bluetooth to this Web app. </p>
+            <div class="nav"> 
+                <a href="index.html" class="button"> Home </a>
+                <a href="about.html" class="button"> About </a> 
+                <a href="webstuff.html" class="button"> WEB </a>
+            </div>
 
-        <h1> How We Created It </h1>
-        <p> Using Arduino transmitters </p>
+        </div>
 
-        <h1> Data Receiving </h1>
-        <p> via Bluetooth from the Arduino </p>
-
-        <h1> Source </h1>
-        <p> View the repository <a href=https://github.com/limelody/enghack-site> here</a>!</p>
-    </div>
-</body>
+    </body>
 
 </html>
