--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title> Enghack Project </title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet" />
-  
+
     </head>
 
     <body>
@@ -18,7 +18,12 @@
                 <a href="index.html" class="button"> Home </a>
                 <a href="about.html" class="button"> About </a> 
                 <a href="webstuff.html" class="button"> WEB </a>
+            
+            <h3> 
+                Creators of this Enghack Project: 
+            </h3>
 
+            <p> Connor Sweet, Jonathan Lin, Melody Li, Tibi, Andronescu </p>
 
         </div>
 
