better graphic designs, more appealing fonts

--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 
         <title> Enghack Project </title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 
     </head>
 
@@ -12,8 +14,8 @@
             Drone 
         </h1> 
     
-        <a href="index.html" class="button"> Home </a>
-        <a href="about.html" class="button"> About </a> 
+        <a href="index.html" class="button"> HOME </a>
+        <a href="about.html" class="button"> ABOUT </a> 
         <a href="webstuff.html" class="button"> WEB </a>
 
         <hr>
@@ -40,6 +42,6 @@
         <h2> Source </h2>
         <p> View the repository <a href=https://github.com/limelody/enghack-site> here</a>!</p>
         <p> All Arduino files are available <a href=https://drive.google.com/open?id=1Fk9bFCpER8t13etGb770uVNJy-yA_TIM> here</a>!</p>
-        
+
     </body>
 </html>
