--- a/index.html
+++ b/index.html
@@ -6,26 +6,29 @@
 
         <title> Enghack Project </title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 
     </head>
 
     <body>
-        <div class="bg">
-            <h1>
-                Drone 
-            </h1> 
+       
+         <h1>
+             Drone 
+         </h1> 
 
-                <a href="index.html" class="button"> Home </a>
-                <a href="about.html" class="button"> About </a> 
-                <a href="webstuff.html" class="button"> WEB </a>
+            <a href="index.html" class="button"> HOME </a>
+            <a href="about.html" class="button"> ABOUT </a> 
+            <a href="webstuff.html" class="button"> WEB </a>
             
-            <h3> 
-                Creators of this Enghack Project: 
-            </h3>
+        <br>    
+        <h3 style="text-align:center"> 
+                Designers of this Enghack Project: 
+        </h3>
 
-            <p> Connor Sweet, Jonathan Lin, Melody Li, Tibi, Andronescu </p>
-
-        </div>
+        <p style="text-align:center"> Connor Sweet, Jonathan Lin, Melody Li, Tibi Andronescu </p>
+        <br> 
+        <img src="assets/parrot_drone.png" align="middle">
 
     </body>
 
