--- a/webstuff.html
+++ b/webstuff.html
@@ -4,6 +4,8 @@
 
         <title> Enghack Project </title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 
     </head>
 
@@ -12,8 +14,8 @@
             Drone 
         </h1> 
             
-        <a href="index.html" class="button"> Home </a>
-        <a href="about.html" class="button"> About </a> 
+        <a href="index.html" class="button"> HOME </a>
+        <a href="about.html" class="button"> ABOUT </a> 
         <a href="webstuff.html" class="button"> WEB </a>
 
         <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
