added division tag for scrolling design

--- a/webstuff.html
+++ b/webstuff.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title> Enghack Project </title>
+        <title> Drone Project </title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
@@ -24,16 +24,17 @@
 
         <script>
         // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyCx63fq8Y4ce4BLRGGE4udP3iGy-579zAA",
-            authDomain: "fantastic-ac970.firebaseapp.com",
-            databaseURL: "https://fantastic-ac970.firebaseio.com",
-            projectId: "fantastic-ac970",
-            storageBucket: "",
-            messagingSenderId: "81123527942"
-        };
-        firebase.initializeApp(config);
-        var database = firebase.database();
+            var config = {
+                apiKey: "AIzaSyCx63fq8Y4ce4BLRGGE4udP3iGy-579zAA",
+                authDomain: "fantastic-ac970.firebaseapp.com",
+                databaseURL: "https://fantastic-ac970.firebaseio.com",
+                projectId: "fantastic-ac970",
+                storageBucket: "",
+                messagingSenderId: "81123527942"
+            };
+            firebase.initializeApp(config);
+            var database = firebase.database();
+
         </script>
     </body>
 </html>
