--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
 
     </head>
 
@@ -12,7 +13,7 @@
         <div class="noscroll">
             <div class="overlay">
                 <h1>
-                    Drone 
+                    EagleEye 
                 </h1> 
             
                 <a href="index.html" class="button"> HOME </a>
