--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="stylesheet.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Eagle+Lake" rel="stylesheet">
 
     </head>
 
@@ -15,7 +16,7 @@
         <div class="noscroll">
             <div class="overlay">
                 <h1>
-                    Drone 
+                    EagleEye
                 </h1> 
 
                     <a href="index.html" class="button"> HOME </a>
